overflow fixed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ p {
     margin-top: 0;
 }
 
+p {
+    height: 15vh;
+    overflow-y: auto;
+}
+
 button  {
     background-color: rgb(11, 17, 17, 0.4);
     border: 3px solid black;
@@ -34,7 +39,9 @@ button:hover {
 
 .inner-1 {
     height: 45%;
-    padding: 50px 150px;
+    padding-top: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
     word-wrap: break-word;
     color: white;
 }
